@@ -10,6 +10,8 @@ Test file and literal inclusion
 
 .. include:: subdir/include.inc
 
+.. include:: /subdir/include.inc
+
 .. literalinclude:: literal.inc
    :language: python
 
