@@ -1,0 +1,3 @@
+.. This file is included from subdir/includes.txt.
+
+This is an include file.
